# openleetcode

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  README.md  TEST_FORMAT.md  cabal.project  generate_prompt.py  hie.yml  install.ps1  install.sh  molotov.py  openleetcode.cabal  openleetcode.yml  pyproject.toml  spartan.py
.badges/: problems.json
.github/workflows/: ci.yml  update-problems-counter.yml
assets/: demo.tape
backends/piston/: docker-compose.yml
cli/: Main.hs
cli/CLI/: AppEnv.hs  Commands.hs  Config.hs  Download.hs  GitHub.hs  Installer.hs  Onboarding.hs  Runtime.hs  Submit.hs  SubmitPipeline.hs  UI.hs  Update.hs
cli/tests/: CLIMain.hs  CLISpec.hs
core/Core/: Types.hs
core/Core/Executor/: Any.hs  Class.hs  Piston.hs
core/Core/Generator/: Class.hs  Splitmix.hs
core/Core/Judge/: Class.hs  Exact.hs  IgnoreOrder.hs
core/Core/Test/: Converter.hs  Loader.hs  Runner.hs  Types.hs
core/tests/: Main.hs
core/tests/Generator/: SplitmixSpec.hs
core/tests/Judge/: ExactSpec.hs  IgnoreOrderSpec.hs
prototype/: build.gradle  settings.gradle
prototype/gradle/wrapper/: gradle-wrapper.properties
runtime/java/: Json.java
runtime/python3/: json_gen.py
runtimes/cpp/: main.cpp  time.cpp  utilities.cpp
runtimes/csharp/: main.cs  time.cs  utilities.cs
runtimes/dart/: json.dart  main.dart  time.dart  utilities.dart
runtimes/go/: json.go  json_gen.go  main.go  time.go  utilities.go
runtimes/java/: Json.java  Main.java  Time.java  main.java  utilities.java
runtimes/kotlin/: Json.kt  Main.kt  Time.kt  main.kt  utilities.kt
runtimes/python/: json_gen.py  main.py  time.py
runtimes/python2/: main.py  time.py  utilities.py
runtimes/python3/: json.py  main.py  time.py  utilities.py
runtimes/ruby/: json.rb  json_gen.rb  main.rb  time.rb  utilities.rb
runtimes/rust/: main.rs  time.rs  utilities.rs
runtimes/swift/: json.swift  main.swift  time.swift  utilities.swift
runtimes/typescript/: main.ts  time.ts  utilities.ts
sandbox/piston/: docker-compose.yml
sandboxes/piston/: docker-compose.yml
tests/1-500/1. two-sum/: manifest.yaml  manifest.yml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/10. regular-expression-matching/: manifest.yaml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/100. same-tree/: manifest.yaml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/101. symmetric-tree/: manifest.yaml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/102. binary-tree-level-order-traversal/: manifest.yaml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/103. binary-tree-zigzag-level-order-traversal/: manifest.yaml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/104. maximum-depth-of-binary-tree/: manifest.yaml  manifest.yml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/105. construct-binary-tree-from-preorder-and-inorder-traversal/: manifest.yaml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/106. construct-binary-tree-from-inorder-and-postorder-traversal/: manifest.yaml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/107. binary-tree-level-order-traversal-ii/: manifest.yaml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/108. convert-sorted-array-to-binary-search-tree/: manifest.yaml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/1-500/109. convert-sorted-list-to-binary-search-tree/: manifest.yaml  sol.cpp  sol.cs  sol.dart  sol.go  sol.java  sol.kt  sol.py  sol.py2  sol.rb  sol.rs  sol.swift  sol.ts
tests/two-sum/: manifest.yml
(+13158 files in other folders)
