cabal-version:      3.0
name:               openleetcode
version:            0.1.0.0
synopsis:           we have democratized the Leetcode tests
homepage:           https://github.com/therepanic/openleetcode
license:            Unlicense
license-file:       LICENSE
author:             Andrey Litvitski
maintainer:         andrey1010102008@gmail.com
category:           Development
build-type:         Simple

common warnings
    ghc-options: -Wall

executable cli
    import:           warnings
    main-is:          Main.hs
    other-modules:
    build-depends:
        base ^>=4.19.1.0,
        openleetcode:core,
        optparse-applicative
    hs-source-dirs:   cli
    default-language: GHC2021

library core
    import:           warnings
    exposed-modules:
        Core.Executor.Class
        Core.Executor.Piston
        Core.Types
        Core.Generator.Class
        Core.Generator.Splitmix
        Core.Judge.Class
        Core.Judge.IgnoreOrder
        Core.Judge.Exact
        Core.Test.Converter
        Core.Test.Loader
        Core.Test.Runner
        Core.Test.Types
    build-depends:    base ^>=4.19.1.0,
                      req,
                      aeson,
                      text,
                      containers,
                      splitmix,
                      vector,
                      yaml,
                      async,
                      bytestring
    hs-source-dirs:   core
    default-language: GHC2021

test-suite core-tests
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   core/tests
    main-is:          Main.hs
    other-modules:
        Generator.SplitmixSpec
        Judge.ExactSpec
        Judge.IgnoreOrderSpec
    build-depends:
        base ^>=4.19.1.0,
        openleetcode:core,
        hspec,
        containers
